--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,3 +15,7 @@ jobs:
         dotnet-version: 3.1.100
     - name: Build with dotnet
       run: dotnet build --configuration Release
+    - name: Test x64
+      run: dotnet test --configuration Release --no-build --runtime win-x64
+    - name: Test x64
+      run: dotnet test --configuration Release --no-build --runtime win-x86
