--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,13 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Setup .NET Core
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
     - name: Test x64
-      run: dotnet test --configuration Release --no-build --runtime win-x64
-    - name: Test x64
-      run: dotnet test --configuration Release --no-build --runtime win-x86
+      run: dotnet test --configuration Release --runtime win-x64
+    - name: Test x86
+      run: dotnet test --configuration Release --runtime win-x86
