--- a/src/U2fWin10.csproj
+++ b/src/U2fWin10.csproj
@@ -5,7 +5,7 @@
 
     <!-- NuGet -->
     <PackageId>U2fWin10</PackageId>
-    <Version>2.0.0-preview1</Version>
+    <Version>2.0.0</Version>
     <Authors>Dmitry Yakimenko</Authors>
     <Company>detunized.net</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
