--- a/example/Example.csproj
+++ b/example/Example.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFrameworks>net48;netcoreapp3.1;net7</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
