--- a/src/U2fWin10.csproj
+++ b/src/U2fWin10.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>U2fWin10</RootNamespace>
 
     <!-- NuGet -->
